--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ body {
 
 header {
     height: 5.31rem;
-    width: 100%;
+    width: 100vw;
     min-width: 42rem;
     background-color: white;
     position: fixed;
