--- a/index.css
+++ b/index.css
@@ -83,7 +83,7 @@ a {
     align-items: center;
     height: 43.5rem;
     background-image: url(https://i.ibb.co/YLgVTpT/banner-landingpage.jpg);
-    background-position: center;
+    background-position: right;
     background-size: cover;
     background-repeat: no-repeat;
     z-index: 1;
