--- a/index.css
+++ b/index.css
@@ -341,9 +341,11 @@ footer .fr {
 
     #logobox2 ul {
         display: flex;
+        justify-content: space-between;
         align-items: center;
         padding: 0;
         margin: 0;
+        width: 80%;
     }
 
     #logobox2 li {
